--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
   <%= f.input :status, :as => :select, :collection => User::Status.ordered_values, :default => 0 %>
 
   <%= f.buttons do %>
-    <%= f.commit_button %>
+    <%= f.commit_button :button_html => { :id => "submit_btn" } %>
   <% end %>
 <% end %>
 
