Add dish edit/delete + photos

--- a/app/views/dish_dashboard/_dish_list.html.erb
+++ b/app/views/dish_dashboard/_dish_list.html.erb
@@ -6,7 +6,11 @@
 <% end %>
 
 <div class="well">
-  <h2><i>"La carte"</i></h2>
+  <center>
+    <h2><i>"La carte"</i></h2>
+    <br/>
+  </center>
+
   <!-- Warning dish-list must stay arround the list of menus -->
   <ul class="nav nav-list dish-append">
     <% @menu.dishes.each do |dish| %>
@@ -19,7 +23,7 @@
   <h3>Add dish</h3>
   <span id="ajax-error-message"></span>
   <br/>
-  <%= semantic_form_for :dish, :html => {:id => 'add-dish-ajax'}, :remote => true, :failure => 'alert("lol")', :url => table_dashboard_menu_dish_create_path do |f| %>
+  <%= semantic_form_for :dish, :html => {:id => 'add-dish-ajax'}, :remote => true, :url => table_dashboard_menu_dish_create_path do |f| %>
     <%= f.input :title, :as => :autocomplete, :url => misc_autocomplete_dish_sample_title_path %>
     <%= f.input :description %>
     <%= f.input :position, :required => false %>
