--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -46,22 +46,31 @@ img.image-triggerable {
     }
 }
 
+.dish-append {
+    height : 190px;
+    overflow-x : auto;
+}
+
 .each-dish {
     @include rounded(5px); 
-    height : 18px;
+    height : 150px;
+    width : 100px;
+    float : left;
     border : 1px solid black;
     margin-top : 6px;
     padding : 4px 6px;
+    margin-left : 10px;
     @include transition(0.3s);
     &:hover {
 	opacity : 0.5;
 	cursor : pointer;
     }
-    #title-dish {
-	float : left;
-    }
+    text-align : center;
     #image-dish {
-	float : right;
+	
+    }
+    #title-dish {
+	font-size : 15px;
     }
 }
 
@@ -90,5 +99,20 @@ img.image-triggerable {
     }
     .submit {
 	display : none;
+    }
+}
+
+ul.ui-autocomplete {
+    background-color : whiteSmoke;
+    border : 1px solid #999;
+    width : 200px;
+    padding : 5px;
+    @include rounded_bottom(5px);
+    li {
+	padding : 2px 0px;
+	cursor : pointer;
+	&:hover {
+	    
+	}
     }
 }
