Revert "Update images"
This reverts commit 3066edd654231085d4eebd8be26dc8c3dddcb78a.

--- a/app/views/table_view/show.html.erb
+++ b/app/views/table_view/show.html.erb
@@ -1,249 +1,246 @@
-<div class="Inner">
-		
-			<div id="TableDisplay_Intro">
-				<a href="#" id="BackToSearch">d'autres tables dans le voisinage</a>
-				<h2>Titre de la table géniale où tu vas manger</h2>
-				<span>Paris 20e</span>
-				<ul id="SocialSharing">
-					<li></li>
-				</ul>
-			</div>
 
-			<div id="Main">				
-				<section id="TableDisplay_Menu">
-					<div id="TableDisplay_Carousel">
-						<a href="#" id="TableDisplay_Carousel_Previous">Previous</a>
-						<a href="#" id="TableDisplay_Carousel_Next">Next</a>
-						<ul>
-							<li>
-								<%= image_tag 'samples/cover.png' %>
-								<h3>Magnifique sandwich au poulet</h3>
-							</li>
-						</ul>
-					</div>
-					<h1 id="TableDisplay_Title">Nom de menu forcement un peu alambiqué</h1>
-					<p id="TableDisplay_Format">Dîner</p>
-					<article id="TableDisplay_MenuDesc">
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sed nisi nisl. Maecenas in metus eros. Nullam id felis libero, blandit feugiat lectus. Fusce a justo quis sem condimentum hendrerit. Proin nibh dolor, elementum a eleifend eget, elementum ut ligula. Nunc at dui lacus, ut aliquet elit. Maecenas consequat eleifend placerat.</p>
-					</article>
-					
-					<ul id="TableDisplay_DishesList">
-						<li>
-							<%= image_tag 'samples/TartareDeSaumon.png' %>
-							<span class="Dish_Type_Tag">Entrée</span>
-							<h3>Tartare de saumon</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis eleifend mi. Donec non justo a erat rhoncus faucibus.</p>
-						</li>
-						<li>
-							<img src="images/samples/CoqAuVin.jpg" alt=""/>
-							<span class="Dish_Type_Tag">Plat</span>
-							<h3>Coq au Vin</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis eleifend mi. Donec non justo a erat rhoncus faucibus.</p>
-						</li>
-						<li>
-							<img src="images/samples/MousseAuChocolat.jpg" alt=""/>
-							<span class="Dish_Type_Tag">Dessert</span>
-							<h3>Mousse au chocolat</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam quis eleifend mi. Donec non justo a erat rhoncus faucibus.</p>
-						</li>
-					</ul>
-					
-					<div id="TableDisplay_OtherMenus" class="SubLevel">
-						<h3>Je vous propose également</h3>
-						<ul>
-							<li class="MiniMenu">
-								<div>
-									<img src="images/samples/MenuSudOuest.jpg" alt="" />
-									<span class="format">dîner</span>
-								</div>
-								<h2>Menu sud-ouest</h2>
-								<ul>
-									<li>nom du plat #1</li>
-									<li>nom du plat #2</li>
-									<li>nom du plat #3</li>
-								</ul>
-							</li>
-							<li class="MiniMenu">
-								<div>
-									<img src="images/samples/BrunchALaMaison.jpg" alt="" />
-									<span class="format">brunch</span>
-								</div>
-								<h2>Brunch à la maison</h2>
-								<ul>
-									<li>nom du plat #1</li>
-									<li>nom du plat #2</li>
-								</ul>
-							</li>
-						</ul>
-					</div>
-				</section>
-				
-				<section id="MoreInfo">
-					<nav class="Tabs">
-						<a href="#">Vos hôtes</a><a href="#" class="courant">Votre table</a><a href="#">Évaluation</a>
-					</nav>
-					<!--<div id="MoreInfo_Host">
-						<ul>
-							<li class="Host">
-								<img src="images/samples/Host1.jpg" alt="" class="Avatar" />
-								<h3>Julien P.</h3>
-								<p class="HostInfo">
-									<strong>27 ans, designer</strong>
-									<span class="HostSpeak">parle : <img src="images/flags/fr.png" alt="Français" /> <img src="images/flags/en.png" alt="Anglais" /></span>
-								</p>
-								<p class="HostDesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at nibh in nisl sagittis rhoncus sit amet vel nunc. Sed semper tempor pharetra. Ut sit amet arcu est. Duis mattis dictum tempus. Sed a tortor enim, ac adipiscing ante. Aenean pretium posuere ullamcorper.</p>
-								<h4>Intérêts en commun</h4>
-								<ul class="HostInterest">
-									<li><img src="images/samples/drive.jpg" alt="Drive" /></li>
-									<li><img src="images/samples/daftpunk.jpg" alt="Daft Punk" /></li>
-									<li><img src="images/samples/californication.jpg" alt="Californication" /></li>
-								</ul>
-								<a href="#" class="Further">voir tout</a>
-							</li>
-							<li class="NoHost"></li>
-						</ul>
-					</div>-->
-					<div id="MoreInfo_Table">
-						<img src="images/samples/table_main.jpg" alt="" id="TableMainPic" />
-						<div id="TableDesc">
-							<h3>Votre table :</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquet, purus nec lacinia commodo, orci arcu molestie nisl, sed bibendum arcu libero eu odio. Ut lacinia auctor metus, quis luctus ligula fermentum eu. Pellentesque nec orci vel ipsum congue consequat. Nullam sapien est, elementum tincidunt tincidunt in, varius id ligula. Nunc semper vestibulum vulputate. Mauris laoreet nibh et risus venenatis laoreet.</p>
-							<ul class="TableInfo">
-								<li><strong>Animaux</strong> : non</li>
-								<li><strong>Fumeurs</strong> : non</li>
-								<li><strong>XXXXXX</strong> : non</li>
-								<li><strong>XXX</strong> : non</li>
-							</ul>
-						</div>
-					</div>
-				</section>
-			</div><!-- #main -->
+
+<div id="content">
+	<div id="main">
+	
+		<section id="table_sheet_menu">
 			
-			<aside>
-				<section id="TableDisplay_Book">
-					<h3>L'addition</h3>
-					<strong>75€</strong>
-					<span>25€ par pers.</span>
-					<form>
-						<label for="Book_Date">Le</label> <input type="date" id="Book_Date" />
-						<label for="Book_Guest">convives :</label> <select id="Book_Guests"><option>choose</option><option>1</option><option>2</option></select>
-						<input type="submit" id="Book_Submit" Value="Contacter l'hôte" />
-					</form>
-				</section>
-				
-				<section id="TableDisplay_Review">
-					<h3>Évaluation du menu</h3>
-					<p><strong>Note générale</strong> <br /><a href="#" class="Further">voir le détail</a></p>
-					<span class="Rating"><span class="Rating4"></span></span>
-					<span class="Count">sur 98 avis</span>
-				</section>
-				
-				<section id="TableDisplay_Calendar">
-					<h3>Calendrier</h3>
-					<select><option>mars 2012</option></select>
-					<table>
-						<thead>
-							<tr>
-								<th>Lun.</th>
-								<th>Mar.</th>
-								<th>Mer.</th>
-								<th>Jeu.</th>
-								<th>Ven.</th>
-								<th>Sam.</th>
-								<th>Dim.</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td class="OffMonth">27</td>
-								<td class="OffMonth">28</td>
-								<td class="OffMonth">29</td>
-								<td class="">1</td>
-								<td class="">2</td>
-								<td class="Unavailable">3</td>
-								<td class="">4</td>
-							</tr>
-							<tr>
-								<td class="">5</td>
-								<td class="">6</td>
-								<td class="Unavailable">7</td>
-								<td class="">8</td>
-								<td class="">9</td>
-								<td class="Unavailable">10</td>
-								<td class="">11</td>
-							</tr>
-							<tr>
-								<td class="">12</td>
-								<td class="">13</td>
-								<td class="">14</td>
-								<td class="">15</td>
-								<td class="">16</td>
-								<td class="Available">17</td>
-								<td class="">18</td>
-							</tr>
-							<tr>
-								<td class="">19</td>
-								<td class="">20</td>
-								<td class="">21</td>
-								<td class="">22</td>
-								<td class="">23</td>
-								<td class="Unavailable">24</td>
-								<td class="">25</td>
-							</tr>
-							<tr>
-								<td class="">26</td>
-								<td class="">27</td>
-								<td class="">28</td>
-								<td class="">29</td>
-								<td class="">30</td>
-								<td class="Unavailable">31</td>
-								<td class="OffMonth">1</td>
-							</tr>
-						</tbody>
-					</table>
-					<p class="Legend"><span class="Unavailable">indisponible</span> <span class="Available">disponible</span></p>
-				</section>
-				
-				<section id="TableDisplay_Location">
-					<h3>Localisation</h3>
-					<iframe width="250" height="160" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=119+rue+d'aboukir+paris&amp;aq=&amp;sll=46.75984,1.738281&amp;sspn=7.421209,21.621094&amp;ie=UTF8&amp;hq=&amp;hnear=119+Rue+d'Aboukir,+75002+Paris,+%C3%8Ele-de-France&amp;t=m&amp;ll=48.868667,2.35013&amp;spn=0.009033,0.021372&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
-				</section>
-				
-				<section id="TableDisplay_ExtraInfos">
-					<h3>Infos complétementaires</h3>
-					<ul>
-						<li>Gluten free</li>
-						<li>veggie</li>
-						<li>XXXXXX</li>
-						<li>XXX</li>
-						<li>XXXXXX</li>
-						<li>XXX</li>
-					</ul>
-				</section>
-				
-				<section id="TableDisplay_Neighbourhood">
-					<h3>Dans le coin</h3>
-					<ul>
-						<li class="MiniMenu">
-							<div>
-								<img src="images/samples/MenuSudOuest.jpg" alt="" />
-							</div>
-							<h2>Menu sud-ouest</h2>
-							<p class="Price"><strong>15€</strong> par pers.</p>
-							<p class="Host">chez Julien P.</p>
-						</li>
-						<li class="MiniMenu">
-							<div>
-								<img src="images/samples/BrunchALaMaison.jpg" alt="" />
-							</div>
-							<h2>Brunch à la maison</h2>
-							<p class="Price"><strong>15€</strong> par pers.</p>
-							<p class="Host">chez Cédric G.</p>
-						</li>
-					</ul>
-					<a href="#" class="Further">voir plus de tables</a>
-				</section>
-				
-			</aside>
+			<%= image_tag 'samples/SAMPLE_table_sheet_cover.jpg', :id=>'table_sheet_cover' %>
 			
-		</div>
+			<div id="table_sheet_intro">
+				<div id="table_sheet_intro_host">
+					<%= image_tag 'samples/SAMPLE_host_mini.jpg' %>
+					<a href="#" class="calltoaction2">en savoir +</a>
+				</div>
+				<p>Julien vous propose</p>
+				<h3>nom de la table forcément alambiqué</h3>
+				<span id="table_sheet_format" class="diner">Diner</span>
+			</div>
+			
+			<ul id="table_sheet_menu_list">
+				<li>
+					<span class="format">Diner</span>
+					<h2>Titre du menu 1</h2>
+				</li>
+				<li>
+					<span class="format">Brunch</span>
+					<h2>Titre du menu 2</h2>
+				</li>
+			</ul>
+			
+			<ul id="table_sheet_menu_dishes">
+				<li>
+					<%= image_tag 'samples/SAMPLE_dish1.jpg' %>
+					<span class="dish_type">Entrée</span>
+					<h1>Nom du plat</h1>
+					<p class="dish_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse aliquet congue elit eget varius. Nulla quis neque orci. Suspendisse metus ante.</p>
+				</li>
+				<li>
+					<%= image_tag 'samples/SAMPLE_dish2.jpg' %>
+					<span class="dish_type">Plat</span>
+					<h1>Nom du plat</h1>
+					<p class="dish_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse aliquet congue elit eget varius. Nulla quis neque orci. Suspendisse metus ante.</p>
+				</li>
+				<li>
+					<%= image_tag 'samples/SAMPLE_dish3.jpg' %>
+					<span class="dish_type">Dessert</span>
+					<h1>Nom du plat</h1>
+					<p class="dish_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse aliquet congue elit eget varius. Nulla quis neque orci. Suspendisse metus ante.</p>
+				</li>
+			</ul>
+			
+		</section>
+		
+		
+		<section id="table_sheet_info" class="box">
+			<nav class="tabs">
+				<ul>
+					<li>Vos hôtes</li>
+					<li>Votre table</li>
+					<li>Évaluation</li>
+				</ul>
+			</nav>
+			
+			<div id="table_sheet_info_hosts">
+				<div class="host_bio">
+					<%= image_tag 'samples/SAMPLE_host1.jpg' %>
+					<h2>Julien P.</h2>
+					<span class="host_bio_age">27 ans</span>
+					<span class="host_bio_occupation">Designer</span>
+					<ul class="host_bio_speak">
+						<li class="fr">French</li>
+						<li class="en">English</li>
+					</ul>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse aliquet congue elit eget varius. Nulla quis neque orci. Suspendisse metus ante.</p>
+					<ul class="host_bio_interests">
+						<li class="music">Music</li>
+						<li class="design">Design</li>
+					</ul>
+					<ul class="host_bio_pets">
+					</ul>
+					<a href="#">Learn more</a>
+				</div>
+				
+				<div class="host_bio">
+					<%= image_tag 'samples/SAMPLE_host2.jpg' %>
+					<h2>Alex S.</h2>
+					<span class="host_bio_age">21 ans</span>
+					<span class="host_bio_occupation">Engineer</span>
+					<ul class="host_bio_speak">
+						<li class="fr">French</li>
+						<li class="en">English</li>
+					</ul>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse aliquet congue elit eget varius. Nulla quis neque orci. Suspendisse metus ante.</p>
+					<ul class="host_bio_interests">
+						<li class="music">Music</li>
+						<li class="design">Design</li>
+					</ul>
+					<ul class="host_bio_pets">
+						<li id="cat">Cat</li>
+					</ul>
+					<a href="#">Learn more</a>
+				</div>
+			</div>
+			
+			<div id="table_sheet_info_table">
+				<%= image_tag 'samples/SAMPLE_table_big.jpg', :class=>'main' %>
+				<h3>Titre de la table</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ante neque, rhoncus non gravida ac, viverra ut nisi. Aenean viverra velit at justo accumsan aliquam hendrerit mi malesuada. Aliquam vel tincidunt nunc. Donec sed dui sit amet elit laoreet congue ac vel enim. In ac malesuada dolor.</p>
+				<ul>
+					<li><%= image_tag 'samples/SAMPLE_table_mini1.jpg' %>My kitchen</li>
+					<li><%= image_tag 'samples/SAMPLE_table_mini2.jpg' %>My dining room</li>
+				</ul>		
+			</div>
+		
+			<div id="table_sheet_info_review">
+				<h3>Évaluation</h3>
+				<p>Cette table a reçu <span class="big">2</span> commentaires :</p>
+				<article>
+					<%= image_tag 'samples/SAMPLE_author1.jpg' %>
+					<h4>Nom de l'auteur</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ante neque, rhoncus non gravida ac, viverra ut nisi. Aenean viverra velit at justo accumsan aliquam hendrerit mi malesuada. Aliquam vel tincidunt nunc. Donec sed dui sit amet elit laoreet congue ac vel enim. In ac malesuada dolor.</p>
+					<span class="date">18/02/2012</span>
+				</article>
+				<article>
+					<%= image_tag 'samples/SAMPLE_author2.jpg' %>
+					<h4>Nom de l'auteur</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ante neque, rhoncus non gravida ac, viverra ut nisi. Aenean viverra velit at justo accumsan aliquam hendrerit mi malesuada. Aliquam vel tincidunt nunc. Donec sed dui sit amet elit laoreet congue ac vel enim. In ac malesuada dolor.</p>
+					<span class="date">18/02/2012</span>
+				</article>
+			</div>
+			
+			
+		</section>
+	</div>
+	
+	<aside>
+	
+		<section class="box" id="table_sheet_aside_book">
+			<h3>Book</h3>
+			<form action="">
+				<span>
+					<label for="book_date">Date</label> <input id="book_date" class="form_input" placeholder="18/02/2012" /></span>
+				<span>
+					<label for="book_guests">Guests</label>
+					<select id="book_guests">
+						<option>choose</option>
+						<option>1</option>
+						<option>2</option>
+					</select>
+				</span>
+				<input type="submit" id="book_submit" class="calltoaction" value="Contact" />
+			</form>
+		</section>
+		
+		<section class="box" id="table_sheet_aside_review">
+			<h3>Review</h3>
+		</section>
+		
+		<section class="box" id="table_sheet_aside_map">
+			<h3>Map</h3>
+			<%= image_tag 'samples/SAMPLE_map_aside.jpg' %>
+			<p>rue d'Aboukir, Paris 75002 <a href="#">more table in the neighborhood</a></p>
+		</section>
+		
+		<section class="box" id="table_sheet_aside_calendar">
+			<h3>Calendar</h3>
+			<select>
+				<option>February 2012</option>
+				<option>March 2012</option>			
+			</select>
+			<table>
+				<thead>
+					<tr>
+						<th>Sun</th>
+						<th>Mon</th>
+						<th>Tue</th>
+						<th>Wed</th>
+						<th>Thu</th>
+						<th>Fri</th>
+						<tH>Sat</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>29</td>
+						<td>30</td>
+						<td>31</td>
+						<td>1</td>
+						<td>2</td>
+						<td>3</td>
+						<td>4</td>
+					</tr>
+					<tr>
+						<td>5</td>
+						<td>6</td>
+						<td>7</td>
+						<td>8</td>
+						<td>9</td>
+						<td>10</td>
+						<td>11</td>
+					</tr>
+					<tr>
+						<td>12</td>
+						<td class="off">13</td>
+						<td class="off">14</td>
+						<td class="off">15</td>
+						<td class="off">16</td>
+						<td class="off">17</td>
+						<td class="off">18</td>
+					</tr>
+					<tr>
+						<td class="free">19</td>
+						<td class="free">20</td>
+						<td class="free">21</td>
+						<td>22</td>
+						<td>23</td>
+						<td>24</td>
+						<td>25</td>
+					</tr>
+					<tr>
+						<td>26</td>
+						<td>27</td>
+						<td>28</td>
+						<td>1</td>
+						<td>2</td>
+						<td>3</td>
+						<td>4</td>
+					</tr>
+				</tbody>
+			</table>
+			<span class="off">booked</span>
+			<span class="free">available</span>
+			<span class="unavailable">unavailable</span>
+		</section>
+		
+		<section class="box" id="table_sheet_aside_informations">
+			<h3>Additional informations</h3>
+			<ul>
+				<li class="glutenfree">Gluten-free</li>
+				<li class="veggie">Veggie</li>
+			</ul>
+		</section>
+	
+	</aside>
+
+</div>
