Add max guests to the Menu. Add lunch and afternoon tea in Menu categories. Fix menu tests. Remove generated diagrams from git.

--- a/app/views/menu_dashboard/_edit.html.erb
+++ b/app/views/menu_dashboard/_edit.html.erb
@@ -3,7 +3,7 @@
 
   <%= f.input :title %>
   <%= f.input :category, :as => :select, :collection => Menu::Category.ordered_values, :default => 1 %>
-  <%= f.inputs :price, :participation_cooking, :description %>
+  <%= f.inputs :price, :participation_cooking, :description, :max_guests %>
   
   
   <%= f.buttons do %>
